# ex3.3

./: CMakeLists.txt  README.md
include/: shared_ptr.hpp  shared_ptr_sync_atomics.hpp  shared_ptr_sync_critical_sections.hpp  shared_ptr_sync_none.hpp
src/: sync_benchmark.cpp
tests/: CMakeLists.txt  TestA_SMF_and_get.cpp  TestB_assign_reset.cpp  TestC_compare.cpp  TestD_threads.cpp
